--- a/Dependencias/Dropzone/dropzone.css
+++ b/Dependencias/Dropzone/dropzone.css
@@ -2,7 +2,7 @@
  * The MIT License
  * Copyright (c) 2012 Matias Meno <m@tias.me>
  */
-@-webkit-keyframes passing-through {
+ @-webkit-keyframes passing-through {
   0% {
     opacity: 0;
     -webkit-transform: translateY(40px);
@@ -174,7 +174,8 @@
   box-sizing: border-box; }
 
 .dropzone {
-  min-height: 150px;
+  height: 300px;
+  overflow: auto;
   border: 2px solid rgba(0, 0, 0, 0.3);
   background: white;
   padding: 20px 20px; }
@@ -190,9 +191,6 @@
     border-style: solid; }
     .dropzone.dz-drag-hover .dz-message {
       opacity: 0.5; }
-  .dropzone .dz-message {
-    text-align: center;
-    margin: 2em 0; }
     .dropzone .dz-message .dz-button {
       background: none;
       color: inherit;
@@ -201,20 +199,10 @@
       font: inherit;
       cursor: pointer;
       outline: inherit; }
-  .dropzone .dz-preview {
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    margin: 16px;
-    min-height: 100px; }
     .dropzone .dz-preview:hover {
       z-index: 1000; }
       .dropzone .dz-preview:hover .dz-details {
         opacity: 1; }
-    .dropzone .dz-preview.dz-file-preview .dz-image {
-      border-radius: 20px;
-      background: #999;
-      background: linear-gradient(to bottom, #eee, #ddd); }
     .dropzone .dz-preview.dz-file-preview .dz-details {
       opacity: 1; }
     .dropzone .dz-preview.dz-image-preview {
@@ -235,19 +223,6 @@
         text-decoration: underline; }
     .dropzone .dz-preview:hover .dz-details {
       opacity: 1; }
-    .dropzone .dz-preview .dz-details {
-      z-index: 20;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      font-size: 13px;
-      min-width: 100%;
-      max-width: 100%;
-      padding: 2em 1em;
-      text-align: center;
-      color: rgba(0, 0, 0, 0.9);
-      line-height: 150%; }
       .dropzone .dz-preview .dz-details .dz-size {
         margin-bottom: 1em;
         font-size: 16px; }
@@ -273,22 +248,15 @@
       transform: scale(1.05, 1.05);
       -webkit-filter: blur(8px);
       filter: blur(8px); }
-    .dropzone .dz-preview .dz-image {
-      border-radius: 20px;
-      overflow: hidden;
-      width: 120px;
-      height: 120px;
-      position: relative;
-      display: block;
-      z-index: 10; }
       .dropzone .dz-preview .dz-image img {
         display: block; }
     .dropzone .dz-preview.dz-success .dz-success-mark {
-      -webkit-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-      -moz-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-      -ms-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-      -o-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1);
-      animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); }
+      opacity: 1;
+      -webkit-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
+      -moz-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
+      -ms-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
+      -o-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
+      animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); }
     .dropzone .dz-preview.dz-error .dz-error-mark {
       opacity: 1;
       -webkit-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1);
@@ -324,30 +292,14 @@
       -ms-transition: opacity 0.4s ease-in;
       -o-transition: opacity 0.4s ease-in;
       transition: opacity 0.4s ease-in; }
-    .dropzone .dz-preview:not(.dz-processing) .dz-progress {
-      -webkit-animation: pulse 6s ease infinite;
-      -moz-animation: pulse 6s ease infinite;
-      -ms-animation: pulse 6s ease infinite;
-      -o-animation: pulse 6s ease infinite;
-      animation: pulse 6s ease infinite; }
-    .dropzone .dz-preview .dz-progress {
-      opacity: 1;
-      z-index: 1000;
-      pointer-events: none;
-      position: absolute;
-      height: 16px;
-      left: 50%;
-      top: 50%;
-      margin-top: -8px;
-      width: 80px;
-      margin-left: -40px;
-      background: rgba(255, 255, 255, 0.9);
-      -webkit-transform: scale(1);
-      border-radius: 8px;
-      overflow: hidden; }
+      .dz-complete .dz-image {
+        opacity: 0;
+        -webkit-transition: opacity 1s ease-in;
+        -moz-transition: opacity 1s ease-in;
+        -ms-transition: opacity 1s ease-in;
+        -o-transition: opacity 1s ease-in;
+        transition: opacity 1s ease-in; }
       .dropzone .dz-preview .dz-progress .dz-upload {
-        background: #333;
-        background: linear-gradient(to bottom, #666, #444);
         position: absolute;
         top: 0;
         left: 0;
@@ -394,3 +346,72 @@
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
         border-bottom: 6px solid #be2626; }
+
+
+        /*personalizado **********************************************/
+        .dz-error-mark{
+          background-color: #fa5353;
+          border-radius: 50%;
+        }
+        .dz-success-mark{
+          background-color: #84fcb4;
+          border-radius: 50%;
+        }
+
+        
+    .dropzone .dz-preview .dz-progress {
+      opacity: 1;
+      z-index: 1000;
+      pointer-events: none;
+      position: absolute;
+      width: 100%;
+      height: 50px;
+      background: rgba(255, 255, 255, 0.9);
+      -webkit-transform: scale(1);
+      border-radius: 20px;
+      overflow: hidden;
+      top: 50%;
+      transform: translate(0,-50%);
+    }
+
+      
+    .dropzone .dz-preview .dz-image {
+      border-radius: 20px;
+      overflow: hidden;
+      width: 100%;
+      height: 50px;
+      position: relative;
+      display: block;
+      z-index: 10;
+      background-color: rgb(244,243,244); 
+    }
+
+    
+  .dropzone .dz-preview {
+    position: relative;
+    display: flex;
+    display: flex;
+    align-items: center;
+    margin: 16px;
+    width: 100%;
+    height: 200px;
+    max-width: 300px;
+  }
+
+
+  .dropzone .dz-preview .dz-details {
+    z-index: 20;
+    position: absolute;
+    bottom: -9%;
+    left: 0;
+    opacity: 0;
+    font-size: 13px;
+    min-width: 100%;
+    max-width: 100%;
+    padding: 2em 1em;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.9);
+}
+        
+
+        
