Multimedia v2 Flechas Siguiente

--- a/Diseño/Grid/grid.css
+++ b/Diseño/Grid/grid.css
@@ -121,6 +121,12 @@
 .ArchivosIconos{
     height: 100%;
     width: 100%;
+    
+}
+
+.ArchivosIconosPreview{
+    max-height: 70%;
+    max-width: 70%;
 }
 
 .ContenedorBotonesArriba{
