--- a/Diseño/ModalPrevisualizacion/modalPrevisualizacion.css
+++ b/Diseño/ModalPrevisualizacion/modalPrevisualizacion.css
@@ -65,6 +65,21 @@
     height: auto;
 }
 
+
+
+.imgPreview{
+    max-width: 700px;
+    max-height: 700px;
+    width: 100%;
+    height: auto;
+}
+
+.AudioContainer{
+    display: flex;
+    align-items: center;
+    height: 300px;
+}
+
 .btnFlechas{
     margin: 10px 10px 5px 10px;
     background-color: #4caf50;
