--- a/Diseño/Grid/grid.css
+++ b/Diseño/Grid/grid.css
@@ -102,7 +102,7 @@
     border-radius: 15px 15px 15px 15px;
     -moz-border-radius: 15px 15px 15px 15px;
     -webkit-border-radius: 15px 15px 15px 15px;
-    background-color: rgba(135, 207, 235, 0.397);
+    background-color: rgb(222 222 222);
     overflow: hidden;
 }
 
